minor refactor and cleanup

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 </head>
 
 <body>
+    <!-- showing that anchor tag styling from the news-article elements is scoped -->
     <a href="#">TESTING STYLE SCOPE</a>
     <main>
     </main>
